cabal-version:       >=1.10

name:                cock
version:             0.1.0.0
synopsis:            Simplified markup language to author HTML pages
description:         This project contains both the library and executable to parse cock file and translate them into proper HTML
license:             PublicDomain
license-file:        LICENSE
author:              Muhammad Kaisar Arkhan
maintainer:          hi@yukiisbo.red
category:            Parsing
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type:              git
  location:          https://git.yukiisbo.red/yuki/cock.git

library
  default-language:  Haskell2010
  extensions:        OverloadedStrings
  hs-source-dirs:    Lib
  exposed-modules:
  other-modules:     Cock.Internal.Html
  build-depends:     base >= 4.13 && < 5,
                     text

executable cock
  default-language:  Haskell2010
  hs-source-dirs:    Exec
  main-is:           Main.hs
  build-depends:     base >= 4.13 && < 5,
                     cock
