cabal-version:       >=1.10

name:                jago
version:             0.1.0.0
synopsis:            Simplified markup language to author HTML pages
description:         This project contains both the library and executable to compile a jago document to HTML
license:             ISC
license-file:        LICENSE
author:              Muhammad Kaisar Arkhan
maintainer:          hi@yukiisbo.red
category:            Parsing
build-type:          Simple
extra-source-files:  CHANGELOG.md

source-repository head
  type:              git
  location:          https://git.sr.ht/~yuki_is_bored/jago

library
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  hs-source-dirs:     Lib
  exposed-modules:    Jago.Parser,
                      Jago.Html,
                      Jago
  other-modules:
  build-depends:      base >= 4.13 && < 5,
                      text >= 1.2 && < 1.3,
                      parsec >= 3.1 && < 3.2,
                      indents >= 0.5 && < 0.6

executable jago
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  hs-source-dirs:     Exec
  main-is:            Main.hs
  build-depends:      base >= 4.13 && < 5,
                      text >= 1.2 && < 1.3,
                      parsec >= 3.1 && < 3.2,
                      indents >= 0.5 && < 0.6,
                      optparse-applicative >= 0.16 && < 0.17,
                      jago
